--- a/index.html
+++ b/index.html
@@ -12,35 +12,43 @@
                 <span> Sohpmore @Liberty HS, Frisco TX </span>
                 <div class="socials">
                     <marquee behavior="slide" loop="1" scrollamount="30" direction="right">
-                        <svg class="logo" id="oldWeb" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <path d="M19.5 7a9 9 0 0 0 -7.5 -4a8.991 8.991 0 0 0 -7.484 4"></path>
-                            <path d="M11.5 3a16.989 16.989 0 0 0 -1.826 4"></path>
-                            <path d="M12.5 3a16.989 16.989 0 0 1 1.828 4"></path>
-                            <path d="M19.5 17a9 9 0 0 1 -7.5 4a8.991 8.991 0 0 1 -7.484 -4"></path>
-                            <path d="M11.5 21a16.989 16.989 0 0 1 -1.826 -4"></path>
-                            <path d="M12.5 21a16.989 16.989 0 0 0 1.828 -4"></path>
-                            <path d="M2 10l1 4l1.5 -4l1.5 4l1 -4"></path>
-                            <path d="M17 10l1 4l1.5 -4l1.5 4l1 -4"></path>
-                            <path d="M9.5 10l1 4l1.5 -4l1.5 4l1 -4"></path>
-                         </svg>
-                        <svg class="logo" id="github" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"></path>
-                         </svg>
-                        <svg class="logo" id="linkedIn" xmlns="http://www.w3.org/2000/svg" width="40" height="30" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <path d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z"></path>
-                            <path d="M8 11l0 5"></path>
-                            <path d="M8 8l0 .01"></path>
-                            <path d="M12 16l0 -5"></path>
-                            <path d="M16 16v-3a2 2 0 0 0 -4 0"></path>
-                        </svg>
-                        <svg class="logo" id="youtube" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <path d="M3 5m0 4a4 4 0 0 1 4 -4h10a4 4 0 0 1 4 4v6a4 4 0 0 1 -4 4h-10a4 4 0 0 1 -4 -4z"></path>
-                            <path d="M10 9l5 3l-5 3z"></path>
-                         </svg>
+                        <a href="https://panipuri3533.github.io/roboticalmotion.github.io/">
+                            <svg class="logo" id="oldWeb" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                <path d="M19.5 7a9 9 0 0 0 -7.5 -4a8.991 8.991 0 0 0 -7.484 4"></path>
+                                <path d="M11.5 3a16.989 16.989 0 0 0 -1.826 4"></path>
+                                <path d="M12.5 3a16.989 16.989 0 0 1 1.828 4"></path>
+                                <path d="M19.5 17a9 9 0 0 1 -7.5 4a8.991 8.991 0 0 1 -7.484 -4"></path>
+                                <path d="M11.5 21a16.989 16.989 0 0 1 -1.826 -4"></path>
+                                <path d="M12.5 21a16.989 16.989 0 0 0 1.828 -4"></path>
+                                <path d="M2 10l1 4l1.5 -4l1.5 4l1 -4"></path>
+                                <path d="M17 10l1 4l1.5 -4l1.5 4l1 -4"></path>
+                                <path d="M9.5 10l1 4l1.5 -4l1.5 4l1 -4"></path>
+                            </svg>
+                        </a>
+                        <a href="https://github.com/SathvikY3533">
+                            <svg class="logo" id="github" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"></path>
+                            </svg>
+                        </a>
+                        <a href="https://www.linkedin.com/in/sathvikyechuri/">
+                            <svg class="logo" id="linkedIn" xmlns="http://www.w3.org/2000/svg" width="40" height="30" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                <path d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z"></path>
+                                <path d="M8 11l0 5"></path>
+                                <path d="M8 8l0 .01"></path>
+                                <path d="M12 16l0 -5"></path>
+                                <path d="M16 16v-3a2 2 0 0 0 -4 0"></path>
+                            </svg>
+                        </a>
+                        <a href="https://www.youtube.com/@roboticalmotion6897">
+                            <svg class="logo" id="youtube" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                <path d="M3 5m0 4a4 4 0 0 1 4 -4h10a4 4 0 0 1 4 4v6a4 4 0 0 1 -4 4h-10a4 4 0 0 1 -4 -4z"></path>
+                                <path d="M10 9l5 3l-5 3z"></path>
+                            </svg>
+                        </a>
                     </marquee>
                 </div>
             </div>
