--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <head>
         <meta charset = "utf-8">
         <link rel = "stylesheet" href = "styles.css" type = "text/css">
+        <script src="script.js"></script>
     </head>
-    <body>
+    <body class="animated fadeInDown">
         <div class="titleBox">
             <div class="title">
                 <h1>Sathvik Yechuri</h1>
                 <span>Sohpmore @Liberty HS, Frisco TX </span>
-                <a class="pdf">
+                <a title="Link_to_resume:pdf" class="pdf" href="">
                     <div class="resumeBox">
                         <h4>RESUME:</h4>
                          <svg xmlns="http://www.w3.org/2000/svg" class="file" width="3vw" height="3vh" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
@@ -24,8 +25,8 @@
                 </a>
             </div>
             <div class="socials">
-                <marquee behavior="slide" loop="1" scrollamount="20" direction="right">
-                    <a href="https://panipuri3533.github.io/roboticalmotion.github.io/">
+                <marquee behavior="slide" loop="1" scrollamount="18" direction="right">
+                    <a title="Middle_school_website" href="https://panipuri3533.github.io/roboticalmotion.github.io/">
                         <svg class="logo" id="oldWeb" xmlns="http://www.w3.org/2000/svg" width="3vw" height="4vh" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M19.5 7a9 9 0 0 0 -7.5 -4a8.991 8.991 0 0 0 -7.484 4"></path>
@@ -40,16 +41,16 @@
                         </svg>
                     </a>
                 </marquee><br>
-                <marquee id="git" behavior="slide" loop="1" scrollamount="20" direction="right">
-                    <a href="https://github.com/SathvikY3533">
+                <marquee id="git" behavior="slide" loop="1" scrollamount="18" direction="right">
+                    <a title="Github" href="https://github.com/SathvikY3533">
                         <svg class="logo" id="github" xmlns="http://www.w3.org/2000/svg" width="3vw" height="4vh" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"></path>
                         </svg>
                     </a>
                 </marquee><br>
-                <marquee behavior="slide" loop="1" scrollamount="20" direction="right">
-                    <a href="https://www.linkedin.com/in/sathvikyechuri/">
+                <marquee behavior="slide" loop="1" scrollamount="18" direction="right">
+                    <a title="LinkedIn" href="https://www.linkedin.com/in/sathvikyechuri/">
                         <svg class="logo" id="linkedIn" xmlns="http://www.w3.org/2000/svg" width="3vw" height="4vh" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z"></path>
@@ -60,8 +61,8 @@
                         </svg>
                     </a>
                 </marquee><br>
-                <marquee behavior="slide" loop="1" scrollamount="20" direction="right">
-                    <a href="https://www.youtube.com/@roboticalmotion6897">
+                <marquee behavior="slide" loop="1" scrollamount="18" direction="right">
+                    <a title="Youtube_channel" href="https://www.youtube.com/@roboticalmotion6897">
                         <svg class="logo" id="youtube" xmlns="http://www.w3.org/2000/svg" width="3vw" height="4vh" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                             <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
                             <path d="M3 5m0 4a4 4 0 0 1 4 -4h10a4 4 0 0 1 4 4v6a4 4 0 0 1 -4 4h-10a4 4 0 0 1 -4 -4z"></path>
@@ -74,6 +75,11 @@
                 <marquee scrollamount="10" direction="right">
                     Website under construction! Please come back after some time ;)
                 </marquee>
+            </div>
+        </div>
+        <div class="projectsList">
+            <div id="project1">
+                <h1>Project 1: </h1>                
             </div>
         </div>
     </body>
