--- a/index.html
+++ b/index.html
@@ -8,74 +8,71 @@
     </head>
     <body class="animated fadeInDown">
         <div class="titleBox">
+            <img id="myImg" src="imgs/IMG_2778.jpeg" alt="myImage" width="20%" height="100%">
             <div class="title">
                 <h1>Sathvik Yechuri</h1>
-                <span>Sohpmore @Liberty HS, Frisco TX </span>
-                <a title="Link_to_resume:pdf" class="pdf" href="">
-                    <div class="resumeBox">
-                        <h4>RESUME:</h4>
-                         <svg xmlns="http://www.w3.org/2000/svg" class="file" width="3vw" height="3vh" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                            <path d="M4 21v-4a3 3 0 0 1 3 -3h5"></path>
-                            <path d="M9 17l3 -3l-3 -3"></path>
-                            <path d="M14 3v4a1 1 0 0 0 1 1h4"></path>
-                            <path d="M5 11v-6a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2h-9.5"></path>
-                         </svg>
-                    </div>
-                </a>
-            </div>
-            <div class="socials">
-                <dl>
-                    <dt><a title="Middle_school_website" href="https://panipuri3533.github.io/roboticalmotion.github.io/">
-                            <svg class="logo" id="oldWeb" xmlns="http://www.w3.org/2000/svg" width="3vw" height="4vh" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                <span>Junior @Liberty HS, Frisco TX </span>
+                <div class="socials">
+                    <a title="Middle_school_website" href="https://panipuri3533.github.io/roboticalmotion.github.io/">
+                                <svg class="logo" id="oldWeb" xmlns="http://www.w3.org/2000/svg" width="3vw" height="4vh" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                    <path d="M19.5 7a9 9 0 0 0 -7.5 -4a8.991 8.991 0 0 0 -7.484 4"></path>
+                                    <path d="M11.5 3a16.989 16.989 0 0 0 -1.826 4"></path>
+                                    <path d="M12.5 3a16.989 16.989 0 0 1 1.828 4"></path>
+                                    <path d="M19.5 17a9 9 0 0 1 -7.5 4a8.991 8.991 0 0 1 -7.484 -4"></path>
+                                    <path d="M11.5 21a16.989 16.989 0 0 1 -1.826 -4"></path>
+                                    <path d="M12.5 21a16.989 16.989 0 0 0 1.828 -4"></path>
+                                    <path d="M2 10l1 4l1.5 -4l1.5 4l1 -4"></path>
+                                    <path d="M17 10l1 4l1.5 -4l1.5 4l1 -4"></path>
+                                    <path d="M9.5 10l1 4l1.5 -4l1.5 4l1 -4"></path>
+                                </svg>
+                    </a>
+                    <a title="Github" href="https://github.com/SathvikY3533">
+                                <svg class="logo" id="github" xmlns="http://www.w3.org/2000/svg" width="3vw" height="4vh" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                    <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"></path>
+                                </svg>
+                    </a>
+                    <a title="LinkedIn" href="https://www.linkedin.com/in/sathvikyechuri/">
+                                <svg class="logo" id="linkedIn" xmlns="http://www.w3.org/2000/svg" width="3vw" height="4vh" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                    <path d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z"></path>
+                                    <path d="M8 11l0 5"></path>
+                                    <path d="M8 8l0 .01"></path>
+                                    <path d="M12 16l0 -5"></path>
+                                    <path d="M16 16v-3a2 2 0 0 0 -4 0"></path>
+                                </svg>
+                    </a>
+                    <a title="Youtube_channel" href="https://www.youtube.com/@roboticalmotion6897">
+                        <svg class="logo" id="youtube" xmlns="http://www.w3.org/2000/svg" width="3vw" height="4vh" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                    <path d="M3 5m0 4a4 4 0 0 1 4 -4h10a4 4 0 0 1 4 4v6a4 4 0 0 1 -4 4h-10a4 4 0 0 1 -4 -4z"></path>
+                                    <path d="M10 9l5 3l-5 3z"></path>
+                        </svg>
+                    </a>
+                    <a title="Link_to_resume(pdf)" id="pdf" href="https://drive.google.com/file/d/1HhiuLQQkF9oJx3D2Y-25NbhYoncTuI9m/view?usp=sharing">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="3vw" height="4vh" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                                <path d="M19.5 7a9 9 0 0 0 -7.5 -4a8.991 8.991 0 0 0 -7.484 4"></path>
-                                <path d="M11.5 3a16.989 16.989 0 0 0 -1.826 4"></path>
-                                <path d="M12.5 3a16.989 16.989 0 0 1 1.828 4"></path>
-                                <path d="M19.5 17a9 9 0 0 1 -7.5 4a8.991 8.991 0 0 1 -7.484 -4"></path>
-                                <path d="M11.5 21a16.989 16.989 0 0 1 -1.826 -4"></path>
-                                <path d="M12.5 21a16.989 16.989 0 0 0 1.828 -4"></path>
-                                <path d="M2 10l1 4l1.5 -4l1.5 4l1 -4"></path>
-                                <path d="M17 10l1 4l1.5 -4l1.5 4l1 -4"></path>
-                                <path d="M9.5 10l1 4l1.5 -4l1.5 4l1 -4"></path>
-                            </svg>
-                    </a></dt>
-                    <dt><a title="Github" href="https://github.com/SathvikY3533">
-                            <svg class="logo" id="github" xmlns="http://www.w3.org/2000/svg" width="3vw" height="4vh" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                                <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"></path>
-                            </svg>
-                    </a></dt>
-                    <dt><a title="LinkedIn" href="https://www.linkedin.com/in/sathvikyechuri/">
-                            <svg class="logo" id="linkedIn" xmlns="http://www.w3.org/2000/svg" width="3vw" height="4vh" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                                <path d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z"></path>
-                                <path d="M8 11l0 5"></path>
-                                <path d="M8 8l0 .01"></path>
-                                <path d="M12 16l0 -5"></path>
-                                <path d="M16 16v-3a2 2 0 0 0 -4 0"></path>
-                            </svg>
-                    </a></dt>
-                    <dt><a title="Youtube_channel" href="https://www.youtube.com/@roboticalmotion6897">
-                            <svg class="logo" id="youtube" xmlns="http://www.w3.org/2000/svg" width="3vw" height="4vh" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                                <path d="M3 5m0 4a4 4 0 0 1 4 -4h10a4 4 0 0 1 4 4v6a4 4 0 0 1 -4 4h-10a4 4 0 0 1 -4 -4z"></path>
-                                <path d="M10 9l5 3l-5 3z"></path>
-                            </svg>
-                    </a></dt>
-                </dl>
-            </div>
-            <div class="movingInfo">
-                <marquee scrollamount="10" direction="right">
-                    Website under construction! Please come back after some time ;)
-                </marquee>
+                                <path d="M4 21v-4a3 3 0 0 1 3 -3h5"></path>
+                                <path d="M9 17l3 -3l-3 -3"></path>
+                                <path d="M14 3v4a1 1 0 0 0 1 1h4"></path>
+                                <path d="M5 11v-6a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2h-9.5"></path>
+                        </svg>
+                    </a>
+                </div>
             </div>
         </div>
-        <div class="projectsList">
+        <div class="movingInfo">
+            <marquee scrollamount="10" direction="right">
+                Website under construction! Please come back after some time ;)
+            </marquee>
+        </div>
+
+        <!-- <div class="projectsList">
             <div id="project1">
                 <h1>Project 1: </h1>                
             </div>
-        </div>
+        </div> -->
     </body>
     <footer>
         <span> &copy 2023 Srikiran Sathvik Yechuri </span>
